cmake_minimum_required(VERSION 3.14)

project("ApiLib")

file(GLOB_RECURSE SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/**/*.cpp)
file(GLOB_RECURSE HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/**/*.hpp)

set(API_LIB_NAME api)

add_library(${API_LIB_NAME} ${SOURCES} ${HEADERS})
target_include_directories(${API_LIB_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/GetService ${CMAKE_CURRENT_SOURCE_DIR}/PostService)

set(API_LIB ${API_LIB_NAME})
set(API_LIB ${API_LIB} PARENT_SCOPE)
set(API_INCLUDE_DIRS ${API_LIB_NAME} ${CMAKE_CURRENT_SOURCE_DIR}/GetService ${CMAKE_CURRENT_SOURCE_DIR}/PostService)
set(API_INCLUDE_DIRS ${API_INCLUDE_DIRS} PARENT_SCOPE)

message("API_LIB = ${API_LIB}")
message("API_INCLUDE_DIRS = ${API_INCLUDE_DIRS}")
