cmake_minimum_required(VERSION 3.14)

project("ComponentsLib")

file(GLOB_RECURSE SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/**/*.cpp)
file(GLOB_RECURSE HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/**/*.hpp ${CMAKE_CURRENT_SOURCE_DIR}/**/*.h)

set(COMPONENTSLIB_NAME components)
set(COMPONENTS_LIB_DEP ${CMAKE_CURRENT_SOURCE_DIR}/Footer ${CMAKE_CURRENT_SOURCE_DIR}/EventForm
${CMAKE_CURRENT_SOURCE_DIR}/EventItem ${CMAKE_CURRENT_SOURCE_DIR}/EventList ${CMAKE_CURRENT_SOURCE_DIR}/Header)
# ${CMAKE_CURRENT_SOURCE_DIR}/EventFilter 

add_subdirectory(UI)

add_library(${COMPONENTSLIB_NAME} ${SOURCES} ${HEADERS})
target_link_libraries(${COMPONENTSLIB_NAME} PRIVATE ${UI_LIB})
target_include_directories(${COMPONENTSLIB_NAME} PUBLIC ${COMPONENTS_LIB_DEP} ${UI_INCLUDE_DIRS})

set(COMPONENTS_LIB ${COMPONENTSLIB_NAME})
set(COMPONENTS_LIB ${COMPONENTS_LIB} PARENT_SCOPE)
set(COMPONENTS_INCLUDE_DIRS ${COMPONENTSLIB_NAME} ${COMPONENTS_LIB_DEP})
set(COMPONENTS_INCLUDE_DIRS ${COMPONENTS_INCLUDE_DIRS} PARENT_SCOPE)

message("COMPONENTS_LIB = ${COMPONENTS_LIB}")
message("COMPONENTS_LIB_INCLUDE_DIRS = ${COMPONENTS_INCLUDE_DIRS}")
