cmake_minimum_required(VERSION 3.14)

project("PagesLib")

file(GLOB_RECURSE SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/**/*.cpp ${CMAKE_CURRENT_SOURCE_DIR}/../painter.cpp)
file(GLOB_RECURSE HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/**/*.hpp ${CMAKE_CURRENT_SOURCE_DIR}/**/*.h {CMAKE_CURRENT_SOURCE_DIR}/../painter.hpp)

include_directories(${CMAKE_CURRENT_SOURCE_DIR}/..)
set(PAGES_LIB_NAME pages)
set(PAGES_LIB_DEP ${CMAKE_CURRENT_SOURCE_DIR}/AuthorizationPage ${CMAKE_CURRENT_SOURCE_DIR}/EventViewPage
${CMAKE_CURRENT_SOURCE_DIR}/LoadingPage ${CMAKE_CURRENT_SOURCE_DIR}/OrganizerPage ${CMAKE_CURRENT_SOURCE_DIR}/ProfilePage ${CMAKE_CURRENT_SOURCE_DIR}/RegistrationPage
${CMAKE_CURRENT_SOURCE_DIR}/VisitorEventListPage ${CMAKE_CURRENT_SOURCE_DIR}/VisitorPage)

add_library(${PAGES_LIB_NAME} ${SOURCES} ${HEADERS})
target_link_libraries(${PAGES_LIB_NAME} Qt${QT_VERSION_MAJOR}::Widgets)
target_include_directories(${PAGES_LIB_NAME} PUBLIC ${PAGES_LIB_DEP})

set(PAGES_LIB ${PAGES_LIB_NAME})
set(PAGES_LIB ${PAGES_LIB} PARENT_SCOPE)
set(PAGES_INCLUDE_DIRS ${PAGES_LIB_NAME} ${PAGES_LIB_DEP})
set(PAGES_INCLUDE_DIRS ${PAGES_INCLUDE_DIRS} PARENT_SCOPE)

message("PAGES_LIB = ${PAGES_LIB}")
message("PAGES_INCLUDE_DIRS = ${PAGES_INCLUDE_DIRS}")
