cmake_minimum_required(VERSION 3.18)
project(json_struct_mapping_lib CXX)

add_subdirectory(struct_mapping_lib)

message("STRUCT_MAPPING_LIB_LIBRARIES = " ${STRUCT_MAPPING_LIB_LIBRARIES})
message("STRUCT_MAPPING_LIB_INCLUDE_DIRS = " ${STRUCT_MAPPING_LIB_INCLUDE_DIRS})

file(GLOB INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR})
file(GLOB SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)

add_library(${PROJECT_NAME} STATIC ${SOURCES})

target_include_directories(${PROJECT_NAME} PRIVATE ${STRUCT_MAPPING_LIB_INCLUDE_DIRS})
target_link_libraries(${PROJECT_NAME} PRIVATE ${STRUCT_MAPPING_LIB_LIBRARIES})

set(JSON_STRUCT_MAPPING_LIB_LIBRARIES ${PROJECT_NAME} PARENT_SCOPE)
set(JSON_STRUCT_MAPPING_LIB_INCLUDE_DIRS ${INCLUDE_DIRS} PARENT_SCOPE)