cmake_minimum_required(VERSION 3.18)
project(struct_mapping_lib)

file(GLOB SOURCES "${PROJECT_SOURCE_DIR}")
file(GLOB INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR})

add_library(${PROJECT_NAME} INTERFACE ${SOURCES})

include_directories(options)

set(STRUCT_MAPPING_LIB_LIBRARIES ${PROJECT_NAME} PARENT_SCOPE)
set(STRUCT_MAPPING_LIB_INCLUDE_DIRS ${INCLUDE_DIRS} PARENT_SCOPE)